--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toxic-MD Pairing</title>
+  <title>Makamesco-MD Pairing</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -86,7 +86,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Toxic-MD Pairing</h1>
+    <h1>Makamesco-MD Pairing</h1>
     <h2>How do you want to pair?</h2>
     <button class="btn" onclick="window.location.href='/qr'">QR Code</button>
     <button class="btn" onclick="window.location.href='/pair'">Pairing Code</button>
