--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background: url('https://files.catbox.moe/eojuys.jpg') no-repeat center center; /* Removed 'fixed' */
+      background: url('https://files.catbox.moe/wu6lu4.jpg') no-repeat center center; /* Removed 'fixed' */
       background-size: cover; /* Ensures the image covers the viewport without moving */
       font-family: 'Segoe UI', Arial, sans-serif;
       color: #c0d0ff;
