--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background: url('https://files.catbox.moe/wu6lu4.jpg') no-repeat center center; /* Removed 'fixed' */
+      background: url('https://files.catbox.moe/eojuys.jpg') no-repeat center center; /* Removed 'fixed' */
       background-size: cover; /* Ensures the image covers the viewport without moving */
       font-family: 'Segoe UI', Arial, sans-serif;
       color: #c0d0ff;
@@ -506,7 +506,7 @@
     <div class="box" id="box">
       <div id="text">
         <i class="fa fa-user"></i>
-        <h3>Makamesco MD PAIRING CODE</h3>
+        <h3>TOXIC MD PAIRING CODE</h3>
         <div class="input-container" id="input-container">
           <input placeholder="2547xxx" type="tel" id="number" pattern="[0-9]*" placeholder="Enter your Phone Number with Country Code" name="">
           <button id="submit">Submit</button>
@@ -601,4 +601,4 @@
     });
   </script>
 </body>
-</html>
+  </html>
