--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toxic MD Pairing Code</title>
+  <title>Makamesco MD Pairing Code</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -506,7 +506,7 @@
     <div class="box" id="box">
       <div id="text">
         <i class="fa fa-user"></i>
-        <h3>TOXIC MD PAIRING CODE</h3>
+        <h3>MAKAMESCO MD PAIRING CODE</h3>
         <div class="input-container" id="input-container">
           <input placeholder="2547xxx" type="tel" id="number" pattern="[0-9]*" placeholder="Enter your Phone Number with Country Code" name="">
           <button id="submit">Submit</button>
